[gd_scene load_steps=11 format=2]

[ext_resource path="res://tube.gd" type="Script" id=1]
[ext_resource path="res://environment.tres" type="Environment" id=2]
[ext_resource path="res://default_theme.tres" type="Theme" id=3]
[ext_resource path="res://stun.ogv" type="VideoStream" id=4]
[ext_resource path="res://tempest.ogv" type="VideoStream" id=5]

[sub_resource type="SpatialMaterial" id=1]
vertex_color_use_as_albedo = true
params_cull_mode = 2
metallic = 0.05
metallic_specular = 0.71
roughness = 0.0

[sub_resource type="ArrayMesh" id=2]

[sub_resource type="SphereMesh" id=3]
radius = 40.0
height = 80.0

[sub_resource type="Curve3D" id=4]
_data = {
"points": PoolVector3Array(  ),
"tilts": PoolRealArray(  )
}

[sub_resource type="Environment" id=5]
background_mode = 1
ambient_light_color = Color( 1, 0.996078, 0.996078, 1 )
ambient_light_energy = 0.2

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
material_override = SubResource( 1 )
cast_shadow = 0
mesh = SubResource( 2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.32119 )
environment = ExtResource( 2 )
far = 1000.0

[node name="BallCamera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.32119 )
environment = ExtResource( 2 )
fov = 90.0
far = 1000.0

[node name="target" type="Spatial" parent="."]

[node name="OmniLight" type="OmniLight" parent="target"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00909901, -2.97555 )
light_energy = 3.0
omni_range = 50.0

[node name="arm" type="Spatial" parent="target"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0 )

[node name="MeshInstance" type="MeshInstance" parent="target"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -56.2501 )
layers = 2
mesh = SubResource( 3 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]

[node name="Path" type="Path" parent="."]
curve = SubResource( 4 )

[node name="ui" type="CanvasLayer" parent="."]

[node name="Speed" type="Label" parent="ui"]
margin_left = 24.0
margin_top = 8.0
margin_right = 942.0
margin_bottom = 78.0
theme = ExtResource( 3 )
text = "SPEED"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPS" type="Label" parent="ui"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -888.0
margin_top = -86.0
margin_right = -16.0
margin_bottom = -16.0
rect_pivot_offset = Vector2( 872.622, 68.8915 )
theme = ExtResource( 3 )
text = "FPS"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="ui"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -376.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = 376.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ui/ViewportContainer"]
size = Vector2( 360, 360 )
handle_input_locally = false
render_target_update_mode = 3

[node name="WorldCam" type="Camera" parent="ui/ViewportContainer/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.32119 )
cull_mask = 1048573
environment = SubResource( 5 )
current = true
fov = 50.0
far = 1000.0

[node name="VideoPanel" type="Panel" parent="ui"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VideoPlayer1" type="VideoPlayer" parent="ui/VideoPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
stream = ExtResource( 4 )
autoplay = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VideoPlayer2" type="VideoPlayer" parent="ui/VideoPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
stream = ExtResource( 5 )
autoplay = true

[node name="videoswitchtimer" type="Timer" parent="ui"]
wait_time = 3.0
autostart = true
[connection signal="finished" from="ui/VideoPanel/VideoPlayer1" to="." method="_on_VideoPlayer1_finished"]
[connection signal="finished" from="ui/VideoPanel/VideoPlayer2" to="." method="_on_VideoPlayer2_finished"]
[connection signal="timeout" from="ui/videoswitchtimer" to="." method="_on_videoswitchtimer_timeout"]
